--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.4</version>
+		<version>2.6.1</version>
 		<relativePath />
 	</parent>
 
@@ -56,9 +56,10 @@
 		<org.hibernate.javax.persistence-version>1.0.2.Final</org.hibernate.javax.persistence-version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<javax.servlet-version>2.5</javax.servlet-version>
+		<spring-cloud-commons.version>3.1.0</spring-cloud-commons.version>
 		<!-- PLUGIN INIZIO -->
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 		<org.mapstruct-version>1.3.0.Final</org.mapstruct-version>
 		<org.apache.maven.plugins-version>2.8.2</org.apache.maven.plugins-version>
 		<org.apache.maven.shared-version>3.2.1</org.apache.maven.shared-version>
@@ -83,6 +84,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-commons</artifactId>
+				<version>${spring-cloud-commons.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>com.github.bld-commons</groupId>
 				<artifactId>common-jpa-service</artifactId>
