--- a/common-rest-connection/pom.xml
+++ b/common-rest-connection/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>common-rest-connection</artifactId>
 	<name>common-rest-connection</name>
