--- a/bld-common-utils/pom.xml
+++ b/bld-common-utils/pom.xml
@@ -9,6 +9,7 @@
 		<version>1.0.3</version>
 	</parent>
 	<artifactId>bld-common-utils</artifactId>
+	<version>1.0.5-SNAPSHOT</version>
 
 	<properties>
 		
