--- a/common-encryption/pom.xml
+++ b/common-encryption/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.0.3</version>
 	</parent>
 	<artifactId>common-encryption</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 
 	<dependencies>
