--- a/common-encryption/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/common-encryption/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -1,10 +1,6 @@
 {
 	"groups": [
-		{
-			"name": "com.bld.crypto.instance",
-			"type": "org.springframework.boot.autoconfigure.web.ServerProperties",
-			"sourceType": "org.springframework.boot.autoconfigure.web.ServerProperties"
-		},
+
 		{
 			"name": "com.bld.crypto.jks",
 			"type": "org.springframework.boot.autoconfigure.web.ServerProperties",
@@ -14,17 +10,21 @@
 			"name": "com.bld.crypto.public-key",
 			"type": "org.springframework.boot.autoconfigure.web.ServerProperties",
 			"sourceType": "org.springframework.boot.autoconfigure.web.ServerProperties"
+		},
+		{
+			"name": "com.bld.crypto.aes",
+			"type": "org.springframework.boot.autoconfigure.web.ServerProperties",
+			"sourceType": "org.springframework.boot.autoconfigure.web.ServerProperties"
 		}
 	],
 	"properties": [
 		{
-			"name": "com.bld.crypto.instance",
-			"type": "com.bld.crypto.type.InstanceType",
-			"sourceType": "org.springframework.boot.autoconfigure.web.ServerProperties"
-		},
-		{
 			"name": "com.bld.crypto.public-key.keys",
 			"type": "java.util.Map<String,String>",
+			"sourceType": "org.springframework.boot.autoconfigure.web.ServerProperties"
+		},{
+			"name": "com.bld.crypto.aes.keys",
+			"type": "java.util.Map<String,com.bld.crypto.aes.config.data.Aes>",
 			"sourceType": "org.springframework.boot.autoconfigure.web.ServerProperties"
 		},
 		{
