--- a/crypto-example/pom.xml
+++ b/crypto-example/pom.xml
@@ -14,9 +14,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>crypto-example</name>
 	<description>Demo project for Spring Boot</description>
-	<properties>
-		<java.version>11</java.version>
-	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -55,6 +53,11 @@
 			<groupId>com.github.bld-commons</groupId>
 			<artifactId>bld-common-utils</artifactId>
 			<version>1.0.7-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>3.1.8</version>
 		</dependency>
 	</dependencies>
 
