--- a/crypto-example/src/main/resources/application.yml
+++ b/crypto-example/src/main/resources/application.yml
@@ -22,7 +22,9 @@ com:
             
             
             
-logging:
-  level:
-    feign: debug
+#logging:
+#  level:
+#    feign: debug
+#    org:
+#      springframework: debug
         
