--- a/common-encryption/pom.xml
+++ b/common-encryption/pom.xml
@@ -9,7 +9,6 @@
 		<version>1.0.3</version>
 	</parent>
 	<artifactId>common-encryption</artifactId>
-	<version>1.0.2</version>
 
 
 	<dependencies>
@@ -17,6 +16,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>3.1.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.github.bld-commons</groupId>
