--- a/crypto-example/pom.xml
+++ b/crypto-example/pom.xml
@@ -14,8 +14,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>crypto-example</name>
 	<description>Demo project for Spring Boot</description>
-	
+
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -47,7 +51,7 @@
 		<dependency>
 			<groupId>com.github.bld-commons</groupId>
 			<artifactId>common-encryption</artifactId>
-			<version>1.0.1</version>
+			<version>1.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.bld-commons</groupId>
