--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
 		<maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
 		<org.bouncycastle-version>1.76</org.bouncycastle-version>
 		<common-annotations.version>1.0.0</common-annotations.version>
+		<common-jpa-service.version>2.0.9-SNAPSHOT</common-jpa-service.version>
 	</properties>
 
 	<scm>
@@ -122,7 +123,7 @@
 			<dependency>
 				<groupId>com.github.bld-commons</groupId>
 				<artifactId>common-jpa-service</artifactId>
-				<version>${project.version}</version>
+				<version>${common-jpa-service.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate.javax.persistence</groupId>
