--- a/bld-common-utils/pom.xml
+++ b/bld-common-utils/pom.xml
@@ -6,10 +6,10 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>1.0.3</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>bld-common-utils</artifactId>
-	<version>1.0.8</version>
+
 
 	<properties>
 
@@ -29,8 +29,8 @@
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -95,7 +95,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
-					<additionalparam>-Xdoclint:none</additionalparam>
+					<doclint>all,-missing</doclint>
 				</configuration>
 			</plugin>
 		</plugins>
