--- a/common-annotations/pom.xml
+++ b/common-annotations/pom.xml
@@ -6,17 +6,12 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>1.0.3</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>common-annotations</artifactId>
-	<version>1.0.0</version>
 
 
 	<dependencies>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -81,6 +76,13 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<doclint>all,-missing</doclint>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
