--- a/common-encryption/pom.xml
+++ b/common-encryption/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>1.0.3</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>common-encryption</artifactId>
 
@@ -26,8 +26,8 @@
 			<artifactId>common-annotations</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -93,6 +93,13 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<doclint>all,-missing</doclint>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
