--- a/common-rest-connection/pom.xml
+++ b/common-rest-connection/pom.xml
@@ -6,10 +6,9 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>1.0.3</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>common-rest-connection</artifactId>
-	<version>1.0.4</version>
 
 
 
@@ -26,10 +25,10 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-		</dependency>
+			<dependency>
+				<groupId>jakarta.validation</groupId>
+				<artifactId>jakarta.validation-api</artifactId>
+			</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
