--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.github.bld-commons</groupId>
 	<artifactId>dev-commons</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.3</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<url>https://github.com/bld-commons/dev-commons.git</url>
 
 	<licenses>
@@ -40,14 +40,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.7</version>
+		<version>3.0.2</version>
 		<relativePath />
 	</parent>
 
 	<properties>
 		<commons-compress.version>1.20</commons-compress.version>
 		<org.apache.commons-version>4.4</org.apache.commons-version>
-		<javax.validation-version>2.0.1.Final</javax.validation-version>
+		<jakarta.validation-version>3.0.2</jakarta.validation-version>
 		<commons-lang3.version>3.13.0</commons-lang3.version>
 		<commons-text.version>1.10.0</commons-text.version>
 		<commons-beanutils.version>1.9.4</commons-beanutils.version>
@@ -59,8 +59,8 @@
 		<spring-cloud-commons.version>3.1.0</spring-cloud-commons.version>
 		<io.jsonwebtoken-version>0.11.5</io.jsonwebtoken-version>
 		<!-- PLUGIN INIZIO -->
-		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-		<java.version>1.8</java.version>
+		<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
+		<java.version>11</java.version>
 		<org.mapstruct-version>1.3.0.Final</org.mapstruct-version>
 		<org.apache.maven.plugins-version>2.8.2</org.apache.maven.plugins-version>
 		<org.apache.maven.shared-version>3.2.1</org.apache.maven.shared-version>
@@ -71,7 +71,6 @@
 		<maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
 		<org.bouncycastle-version>1.76</org.bouncycastle-version>
 		<common-annotations.version>1.0.0</common-annotations.version>
-		<common-jpa-service.version>2.0.9-SNAPSHOT</common-jpa-service.version>
 	</properties>
 
 	<scm>
@@ -94,6 +93,11 @@
 				<groupId>com.github.bld-commons</groupId>
 				<artifactId>common-annotations</artifactId>
 				<version>${common-annotations.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>jakarta.validation</groupId>
+				<artifactId>jakarta.validation-api</artifactId>
+				<version>${jakarta.validation-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bouncycastle</groupId>
@@ -121,11 +125,6 @@
 				<version>${spring-cloud-commons.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.github.bld-commons</groupId>
-				<artifactId>common-jpa-service</artifactId>
-				<version>${common-jpa-service.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.hibernate.javax.persistence</groupId>
 				<artifactId>hibernate-jpa-2.1-api</artifactId>
 				<version>${org.hibernate.javax.persistence-version}</version>
@@ -150,11 +149,7 @@
 				<artifactId>commons-text</artifactId>
 				<version>${commons-text.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>javax.validation</groupId>
-				<artifactId>validation-api</artifactId>
-				<version>${javax.validation-version}</version>
-			</dependency>
+
 			<dependency>
 				<groupId>com.github.bld-commons</groupId>
 				<artifactId>class-generator</artifactId>
@@ -327,7 +322,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<tagNameFormat>${project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>releases</releaseProfiles>
 				</configuration>
