--- a/bld-common-utils/pom.xml
+++ b/bld-common-utils/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>2.0.7</version>
+		<version>2.0.8</version>
 	</parent>
 	<artifactId>bld-common-utils</artifactId>
 
@@ -19,6 +19,14 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.geotools.xsd</groupId>
+			<artifactId>gt-xsd-kml</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-geojson</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.locationtech.jts</groupId>
