--- a/bld-common-utils/pom.xml
+++ b/bld-common-utils/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>2.0.8</version>
+		<version>2.0.9</version>
 	</parent>
 	<artifactId>bld-common-utils</artifactId>
 
@@ -25,8 +25,8 @@
 			<artifactId>gt-xsd-kml</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.geotools</groupId>
-			<artifactId>gt-geojson</artifactId>
+			<groupId>org.locationtech.jts.io</groupId>
+			<artifactId>jts-io-common</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.locationtech.jts</groupId>
