--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.github.bld-commons</groupId>
 	<artifactId>dev-commons</artifactId>
 	<packaging>pom</packaging>
-	<version>2.0.8</version>
+	<version>2.0.9</version>
 	<url>https://github.com/bld-commons/dev-commons.git</url>
 
 	<licenses>
@@ -100,9 +100,9 @@
 				<version>23-RC</version>
 			</dependency>
 			<dependency>
-				<groupId>org.geotools</groupId>
-				<artifactId>gt-geojson</artifactId>
-				<version>11.0</version>
+				<groupId>org.locationtech.jts.io</groupId>
+				<artifactId>jts-io-common</artifactId>
+				<version>1.20.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.bld-commons</groupId>
