--- a/crypto-example/pom.xml
+++ b/crypto-example/pom.xml
@@ -4,14 +4,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.15</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.github.bld-commons</groupId>
+		<artifactId>dev-commons</artifactId>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>com.bld-commons.example</groupId>
 	<artifactId>crypto-example</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>crypto-example</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -34,12 +32,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -51,17 +43,15 @@
 		<dependency>
 			<groupId>com.github.bld-commons</groupId>
 			<artifactId>common-encryption</artifactId>
-			<version>1.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.bld-commons</groupId>
 			<artifactId>bld-common-utils</artifactId>
-			<version>1.0.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>3.1.8</version>
+			<version>4.3.1</version>
 		</dependency>
 	</dependencies>
 
@@ -81,7 +71,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.24</version>
+							<version>1.18.42</version>
 						</path>
 						<path>
 							<groupId>org.projectlombok</groupId>
