--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.github.bld-commons</groupId>
 	<artifactId>dev-commons</artifactId>
 	<packaging>pom</packaging>
-	<version>2.0.9</version>
+	<version>2.1.0</version>
 	<url>https://github.com/bld-commons/dev-commons.git</url>
 
 	<licenses>
@@ -40,7 +40,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.3</version>
+		<version>3.5.9</version>
 		<relativePath />
 	</parent>
 
@@ -48,9 +48,9 @@
 		<commons-compress.version>1.20</commons-compress.version>
 		<org.apache.commons-version>4.4</org.apache.commons-version>
 		<jakarta.validation-version>3.1.0</jakarta.validation-version>
-		<commons-lang3.version>3.17.0</commons-lang3.version>
+		<commons-lang3.version>3.20.0</commons-lang3.version>
 		<commons-text.version>1.10.0</commons-text.version>
-		<commons-beanutils.version>1.9.4</commons-beanutils.version>
+		<commons-beanutils.version>1.11.0</commons-beanutils.version>
 		<io.leangen.geantyref-version>1.3.11</io.leangen.geantyref-version>
 		<org.reflections-version>0.9.12</org.reflections-version>
 		<org.hibernate.javax.persistence-version>1.0.2.Final</org.hibernate.javax.persistence-version>
@@ -190,6 +190,16 @@
 				<artifactId>commons-lang</artifactId>
 				<version>${commons-lang.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.bld-commons</groupId>
+				<artifactId>bld-common-utils</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.bld-commons</groupId>
+				<artifactId>common-encryption</artifactId>
+				<version>${project.version}</version>
+		</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
