--- a/pom.xml
+++ b/pom.xml
@@ -348,15 +348,12 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.7.0</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>ossrh</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
-				</configuration>
+  				<groupId>org.sonatype.central</groupId>
+ 				<artifactId>central-publishing-maven-plugin</artifactId>
+    			<version>0.9.0</version>
+    			<configuration>
+        			<publishingServerId>central</publishingServerId>
+      			</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
