--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,7 @@
 		</developer>
 	</developers>
 
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-	</distributionManagement>
+
 
 
 	<parent>
@@ -350,10 +341,12 @@
 			<plugin>
   				<groupId>org.sonatype.central</groupId>
  				<artifactId>central-publishing-maven-plugin</artifactId>
-    			<version>0.9.0</version>
-    			<configuration>
-        			<publishingServerId>central</publishingServerId>
-      			</configuration>
+	    			<version>0.9.0</version>
+        			<extensions>true</extensions>
+			        <configuration>
+				        <publishingServerId>central</publishingServerId>
+			        	<autoPublish>true</autoPublish>
+			        </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
