--- a/common-annotations/pom.xml
+++ b/common-annotations/pom.xml
@@ -9,7 +9,7 @@
 		<version>2.1.0</version>
 	</parent>
 	<artifactId>common-annotations</artifactId>
-
+	<name>Common Annotations</name>
 
 	<dependencies>
 		<dependency>
