--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.bld-commons</groupId>
 	<artifactId>dev-commons</artifactId>
+	<name>Commons</name>
 	<packaging>pom</packaging>
 	<version>2.1.0</version>
 	<url>https://github.com/bld-commons/dev-commons.git</url>
