--- a/crypto-example/pom.xml
+++ b/crypto-example/pom.xml
@@ -4,9 +4,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.github.bld.commons</groupId>
+		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>2.1.0</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>com.bld-commons.example</groupId>
 	<artifactId>crypto-example</artifactId>
