--- a/bld-common-utils/pom.xml
+++ b/bld-common-utils/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>2.1.0</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>bld-common-utils</artifactId>
 	<name>Common Utils</name>
