--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>dev-commons</artifactId>
 	<name>Commons</name>
 	<packaging>pom</packaging>
-	<version>2.1.0</version>
+	<version>2.1.1-SNAPSHOT</version>
 	<url>https://github.com/bld-commons/dev-commons.git</url>
 
 	<licenses>
@@ -38,8 +38,8 @@
 
 	<properties>
 		<commons-compress.version>1.20</commons-compress.version>
-		<org.apache.commons-version>4.4</org.apache.commons-version>
-		<jakarta.validation-version>3.1.0</jakarta.validation-version>
+		<org.apache.commons-version>4.5.0</org.apache.commons-version>
+		<jakarta.validation-version>3.1.1</jakarta.validation-version>
 		<commons-lang3.version>3.20.0</commons-lang3.version>
 		<commons-text.version>1.10.0</commons-text.version>
 		<commons-beanutils.version>1.11.0</commons-beanutils.version>
@@ -48,7 +48,7 @@
 		<org.hibernate.javax.persistence-version>1.0.2.Final</org.hibernate.javax.persistence-version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<spring-cloud-commons.version>3.1.0</spring-cloud-commons.version>
-		<io.jsonwebtoken-version>0.12.6</io.jsonwebtoken-version>
+		<io.jsonwebtoken-version>0.13.0</io.jsonwebtoken-version>
 		<!-- PLUGIN INIZIO -->
 		<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
 		<java.version>17</java.version>
@@ -60,7 +60,7 @@
 		<class-generator.version>2.0.0</class-generator.version>
 		<maven-site-plugin.version>3.8.2</maven-site-plugin.version>
 		<maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
-		<org.bouncycastle-version>1.78.1</org.bouncycastle-version>
+		<org.bouncycastle-version>1.83</org.bouncycastle-version>
 		<common-annotations.version>2.0.3</common-annotations.version>
 		<org.locationtech.jts-version>1.20.0</org.locationtech.jts-version>
 	</properties>
