--- a/common-rest-connection/pom.xml
+++ b/common-rest-connection/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.bld-commons</groupId>
 		<artifactId>dev-commons</artifactId>
-		<version>2.1.1-SNAPSHOT</version>
+		<version>2.1.1</version>
 	</parent>
 	<artifactId>common-rest-connection</artifactId>
     <name>Common Rest Connection</name>
