--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>dev-commons</artifactId>
 	<name>Commons</name>
 	<packaging>pom</packaging>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.1.1</version>
 	<url>https://github.com/bld-commons/dev-commons.git</url>
 
 	<licenses>
