--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>dev-commons</artifactId>
 	<name>Commons</name>
 	<packaging>pom</packaging>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.1.2</version>
 	<url>https://github.com/bld-commons/dev-commons.git</url>
 
 	<licenses>
@@ -41,7 +41,7 @@
 		<org.apache.commons-version>4.5.0</org.apache.commons-version>
 		<jakarta.validation-version>3.1.1</jakarta.validation-version>
 		<commons-lang3.version>3.20.0</commons-lang3.version>
-		<commons-text.version>1.10.0</commons-text.version>
+		<commons-text.version>1.15.0</commons-text.version>
 		<commons-beanutils.version>1.11.0</commons-beanutils.version>
 		<io.leangen.geantyref-version>1.3.11</io.leangen.geantyref-version>
 		<org.reflections-version>0.9.12</org.reflections-version>
@@ -89,7 +89,7 @@
 			<dependency>
 				<groupId>org.geotools.xsd</groupId>
 				<artifactId>gt-xsd-kml</artifactId>
-				<version>23-RC</version>
+				<version>22.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.locationtech.jts.io</groupId>
